Fri Oct 31 13:47:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Parser_Registry.h:
          Added include of ace/os_include/os_stddef.h to pickup size_t type

Fri Oct 31 07:39:04 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Special_Basic_Argument_T.h:

	  Removed export declarations.

Fri Oct 31 08:34:11 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/Makefile.bor:
          Added missing files

Fri Oct 31 07:36:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DynamicInterface/Makefile.bor:
          Removed obsolete files.

Fri Oct 31 07:34:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/AbstractBase_Invocation_Adapter.h:
          Removed ; after ACE_UNIMPLEMENTED_FUNC

        * tao/Valuetype/Makefile.bor:
          Added missing file

        * tao/Messaging/Makefile.bor:
          Removed obsolete files.

Thu Oct 30 23:23:05 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* performance-tests/Cubit/TAO/DII_Cubit/Makefile:
	* performance-tests/Latency/DII/Makefile:
	* performance-tests/Latency/DSI/Makefile:
	* performance-tests/Latency/Deferred/Makefile:
	* performance-tests/RTCorba/Oneways/Reliable/Makefile:
	* performance-tests/Sequence_Latency/DII/Makefile:
	* performance-tests/Sequence_Latency/DSI/Makefile:
	* performance-tests/Sequence_Latency/Deferred/Makefile:

	  Added missing libraries to the link line. This is necessary
	  since the DynamicInterface library depends on the Messaging
	  library.

	* tests/OBV/Supports/Supports_Test_impl.cpp:
	* tests/Xt_Stopwatch/Stopwatch_display.h:

	  Fixed compilation problems. These showed up only in builds which
	  used MPC.

	* tao/Messaging/Asynch_Timeout_Handler.cpp:
	* tao/Messaging/Asynch_Timeout_Handler.h:
	* tao/Messaging/Messaging.cpp:
	* tao/Messaging/Messaging.h:

	  Cosmetic fixes to get them compiling in minimum_corba builds.

	* tao/Messaging/Messaging.mpc:
